Fase final do Trabalho

--- a/TrabMsg_App/res/layout/opcoes.xml
+++ b/TrabMsg_App/res/layout/opcoes.xml
@@ -12,5 +12,6 @@
         android:layout_height="match_parent"
         android:divider="#ECECEC"
         android:dividerHeight="1sp"
+        android:background="#87CEEB"
     />
 </LinearLayout>
