--- a/TrabMsg_App/res/layout/frmlogin.xml
+++ b/TrabMsg_App/res/layout/frmlogin.xml
@@ -3,6 +3,7 @@
     android:id="@+id/widget0"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#87CEEB"
     xmlns:android="http://schemas.android.com/apk/res/android">
     
     <EditText
