--- a/TrabMsg_App/res/layout/lista_opcao.xml
+++ b/TrabMsg_App/res/layout/lista_opcao.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="5sp">
+        android:textSize="16sp"
+        android:padding="10sp">
  
         <TextView
             android:id="@+id/text"
@@ -16,6 +17,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="5sp"
             android:gravity="center_vertical"
+            android:textSize="16sp"
             android:textColor="#FF000000"
         />
     </LinearLayout>
