--- a/TrabMsg_App/res/layout/listmsgenviadas.xml
+++ b/TrabMsg_App/res/layout/listmsgenviadas.xml
@@ -4,7 +4,6 @@
           android:layout_height="fill_parent"
           android:padding="10dp"
           android:textSize="16sp"
-          android:background="#509A05"
+          android:background="#87CEEB"
           android:textColor="#FFFFFF">
-          
 </TextView>
